0-deprecated-stuff/applications/guru/guru-infra/ingress/prod/jeager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracing-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: "tracing.abhra.shambhala.cloud"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: guru-jaeger-query
              port:
                number: 16686
  tls:
    - hosts:
        - "tracing.abhra.shambhala.cloud"
      secretName: tracing-ingress-cert
